--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,50 @@
+input {
+    display: block;
+}
+.mainAppdiv {
+    display: inline;
+    width: 100%;
+}
+.imagediv {
+    float: right;
+    width: 50px;
+    height: 50px;
+}
+.logodiv {
+    float: left;
+    justify-content: flex-start;
+}
+.profilepic {
+    width: 50px;
+    height: 50px;
+}
+.username {
+    display: inline;
+}
 .regForm {
     text-align: center;
 }
-input {
-    display: block;
+
+.upload-btn {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+}
+
+.btn {
+    border: 2px solid gray;
+    color: gray;
+    background-color: white;
+    padding: 8px 20px;
+    border-radius: 8px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.upload-btn input[type="file"] {
+    font-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
 }
