--- a/public/style.css
+++ b/public/style.css
@@ -5,18 +5,28 @@ input {
     display: inline;
     width: 100%;
 }
-.imagediv {
+.userloggeddiv {
     float: right;
-    width: 50px;
-    height: 50px;
 }
 .logodiv {
     float: left;
     justify-content: flex-start;
 }
+.imgdiv {
+    border-radius: 50%;
+    border: 1px solid blue;
+    width: 70px;
+    height: 70px;
+}
 .profilepic {
+    padding: 10px;
     width: 50px;
     height: 50px;
+}
+
+.profileimage {
+    width: 100px;
+    height: 100px;
 }
 .username {
     display: inline;
@@ -30,7 +40,30 @@ input {
     overflow: hidden;
     display: inline-block;
 }
-
+.uploadprofilepic {
+    position: fixed;
+    top: 35%;
+    right: 0;
+    bottom: 0;
+    left: 40%;
+    width: 400px;
+    height: 200px;
+    z-index: 99999;
+    border-radius: 20px;
+    border: 2px solid black;
+    background-color: white;
+    text-align: center;
+}
+.closemodal {
+    position: absolute;
+    top: 10px;
+    right: 20px !important;
+    margin-bottom: 20px;
+    display: block;
+}
+.uploadtxt {
+    padding-top: 20px;
+}
 .btn {
     border: 2px solid gray;
     color: gray;
