--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,11 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url("https://fonts.googleapis.com/css?family=Berkshire+Swash");
 
+html,
 body {
     font-family: montserrat, arial, verdana;
+    margin: 0;
+    height: 100%;
 }
 
 input {
@@ -14,6 +17,9 @@ main {
     margin: 0;
     min-width: 100vh;
     min-height: 100vh;
+}
+.componentdiv {
+    width: 100%;
 }
 .landingpagediv {
     display: flex;
@@ -29,17 +35,46 @@ main {
     align-items: center;
     overflow: hidden;
     padding-left: 65px;
-    width: 408px;
+    width: 60%;
+    min-height: 100vh;
 }
-.signinbtn {
+.signinbtndiv {
     align-self: flex-end;
     float: right;
-    right: 5px;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+}
+.signbtn,
+.signinbtndiv {
+    width: 75px;
+    border-radius: 15%;
+    background: #27ada9;
+}
+.landing {
+    text-align: center;
+}
+.signinbtndiv a,
+.landing a {
+    text-decoration: none;
+}
+.signbtn {
+    text-align: center;
+    line-height: 2;
+    width: 75px;
+    right: 25%;
+    position: absolute;
 }
 .logobrand {
-    width: 278px;
-    background: #005f53;
-    background: linear-gradient(to right, #f6f1d3, #648880 85%, #293f50);
+    width: 40%;
+    /*background: rgb(58, 180, 179);*/
+    background: linear-gradient(
+        to right,
+        rgba(58, 180, 179, 1),
+        rgba(29, 253, 190, 1) 50%,
+        rgba(69, 252, 244, 1) 100%
+    );
+    min-height: 100vh;
 }
 /*.welcomediv img {
     flex-shrink: 0;
@@ -65,7 +100,7 @@ header {
     position: absolute;
     z-index: 2;
     top: 42%;
-
+    left: 10%;
     font-family: "Berkshire Swash", cursive;
     size: 49px;
     color: white;
@@ -156,14 +191,13 @@ header {
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
     padding: 20px 30px;
     width: 50%;
-    margin: 10% 10% 30% 20%;
+    margin: 20% 10% 30% 20%;
     /*stacking fieldsets above each other*/
     position: relative;
     text-align: center !important;
 }
 .loginForm {
-    width: 30%;
-    margin: 10% 10% 40% 30%;
+    margin-top: 25%;
 }
 .regForm input,
 .loginForm input {
@@ -255,11 +289,14 @@ figure {
     margin: 0.5em;
     padding: 0.5em;
 }
+legend {
+    color: green;
+}
 .friends,
 .pendingfriends {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
 }
 .upload-btn input[type="file"] {
     font-size: 100px;
