--- a/public/style.css
+++ b/public/style.css
@@ -84,10 +84,9 @@ main {
 .signbtn:focus .landing {
     visibility: hidden;
 }
-header {
+.main-header {
     padding: 10px;
-    height: 100px;
-    width: 100%;
+    height: 80px;
     background-color: #44f0e5;
 }
 
@@ -141,7 +140,7 @@ header {
 }
 .headerdiv {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     height: 100px;
     background-color: #44f0e5;
 }
